tests/baselines/reference/for-of35.errors.txt
for-of35.ts(2,5): error TS7023: 'next' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
for-of35.ts(14,10): error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== for-of35.ts (2 errors) ====
    class MyStringIterator {
        next() {
        ~~~~
!!! error TS7023: 'next' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
            return {
                done: true,
                value: v
            }
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new MyStringIterator) { }
             ~
!!! error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.